# cloud-ui-rs

./: Cargo.toml  README.md
src/: app.rs  kinesis.rs  main.rs  streams.rs  ui.rs
src/cloud/: mod.rs
src/cloud/aws/: ec2.rs  kinesis.rs  mod.rs
src/service/: mod.rs  resource.rs
src/ui/: mod.rs  resource.rs  service.rs
src/ui/component/: mod.rs  table.rs
