[package]
name = "kinesis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
aws-config = "0.3.0"
aws-sdk-kinesis = "0.3.0"
crossterm = "0.22.1"
futures = "0.3.19"
tokio = { version = "1", features = ["full"] }